重做整个架构